jan-10-26 style + upgrades

--- a/cv.html
+++ b/cv.html
@@ -1,231 +1,207 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="selected_works.html">Selected Works</a></li>
-        <li><a href="software.html">Software & Codes</a></li>
-        <li><a href="for_professionals.html">For Employers</a></li>
-        <li> <a href="writings.html">Wrtings, Language, and Literature</a></li>
-    </ul>
-</nav>
+<head>
+    <meta charset="UTF-8">
+    <title>Seth Gerberding | CV</title>
 
-<h1>Seth Gerberding</h1>
-<p><strong>Mathematics Ph.D. Student</strong></p>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Merriweather:wght@400;700&display=swap"
+        rel="stylesheet">
 
-<h2>Contact Information</h2>
-<ul>
-    <li>Email: <a href="mailto:seth.gerberding@gmail.com">seth.gerberding@gmail.com</a></li>
-    <li>LinkedIn: <a href="https://www.linkedin.com/in/SethGerberding" target="_blank">Seth Gerberding</a></li>
-</ul>
+    <!-- Styles -->
+    <link rel="stylesheet" href="style.css">
+</head>
 
-<h2>Education</h2>
+<body>
 
-<h3>Texas&nbsp;A&amp;M&nbsp;University</h3>
-<ul>
-    <li>Ph.D. in Mathematics</li>
-    <li>Advisor: Dr. Jean-Luc Guermond</li>
-    <li>Graduation: August 2026 (Anticipated)</li>
-</ul>
+    <nav class="navbar">
+        <div class="navbar-inner">
+            <a href="index.html">Home</a>
+            <a href="selected_works.html">Research</a>
+            <a href="software.html">Software</a>
+            <a href="writings.html">Writings, Language, and Literature</a>
+            <a href="for_professionals.html">For Professionals</a>
+        </div>
+    </nav>
 
-<h3>University of South Dakota</h3>
-<ul>
-    <li>B.S. in Mathematics and Philosophy (Double Major), <em>Summa Cum Laude</em></li>
-    <li>Honors Program University Scholar, Pi Mu Epsilon</li>
-    <li>Degree Conferred: May 2020</li>
-</ul>
+    <div class="container">
 
-<h2>Research Experience</h2>
+        <h1>Seth Gerberding</h1>
+        <p><strong>Mathematics Ph.D. Student</strong></p>
 
-<h3>Graduate Research Assistant (Mentors: Jeff Peterson, Jim Ferguson)</h3>
-<h4>Los Alamos National Laboratory (LANL), Los Alamos, NM</h4>
-<h4>October 2023 – Present</h4>
-<ul>
-    <li>Developed verification methods for simulations using arbitrary equations of state.</li>
-    <li>Implemented a semi-analytic, equation-of-state-agnostic Python solver integrated into the <em>ExactPack</em>
-        library.</li>
-    <li>Verified the LANL Singularity-EOS library.</li>
-    <li>Results published in a peer-reviewed journal and technical reports.</li>
-</ul>
+        <!-- Contact -->
+        <section>
+            <h2>Contact Information</h2>
+            <ul>
+                <li>Email: <a href="mailto:seth.gerberding@gmail.com">seth.gerberding@gmail.com</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/SethGerberding" target="_blank" rel="noopener">Seth
+                        Gerberding</a></li>
+            </ul>
+        </section>
 
-<h3>Summer Fellow, XCP Computational Physics Workshop</h3>
-<h4>Los Alamos National Laboratory (LANL), Los Alamos, NM</h4>
-<h4>June 2023 – August 2023</h4>
-<ul>
-    <li>Developed analytic solutions for special cases of the Euler equations.</li>
-    <li>Wrote Python code for analysis and visualization.</li>
-    <li>Ran simulations using the Eulerian code <em>xRAGE</em>.</li>
-    <li>Results compiled in an internal LANL report.</li>
-</ul>
+        <!-- Education -->
+        <section>
+            <h2>Education</h2>
 
-<h3>Student Intern (Mentor: Matthew Farthing)</h3>
-<h4>U.S. Army Corps of Engineers, Vicksburg, MS</h4>
-<h4>May 2022 – May 2023</h4>
-<ul>
-    <li>Developed an IMEX finite element method for the linear Korteweg–De Vries equation.</li>
-    <li>Implemented the method in Python.</li>
-    <li>Authored a technical report detailing analysis and numerical results.</li>
-</ul>
+            <div class="card">
+                <h3>Texas A&M University</h3>
+                <ul>
+                    <li>Ph.D. in Mathematics</li>
+                    <li>Advisor: Dr. Jean-Luc Guermond</li>
+                    <li>Graduation: August 2026 (Anticipated)</li>
+                </ul>
+            </div>
 
-<h3>Undergraduate Researcher (Mentor: Dr. Anne Shiu)</h3>
-<h4>Texas&nbsp;A&amp;M&nbsp;University, College Station, TX</h4>
-<h4>May 2019 – July 2019</h4>
-<ul>
-    <li>Awarded $4,400 through a competitive undergraduate research program.</li>
-    <li>Proved three significant theorems in computational biology.</li>
-    <li>Authored a 26-page LaTeX research report.</li>
-    <li>Results published in a peer-reviewed journal.</li>
-</ul>
+            <div class="card">
+                <h3>University of South Dakota</h3>
+                <ul>
+                    <li>B.S. in Mathematics and Philosophy (Double Major), <em>Summa Cum Laude</em></li>
+                    <li>Honors Program University Scholar, Pi Mu Epsilon</li>
+                    <li>Degree Conferred: May 2020</li>
+                </ul>
+            </div>
+        </section>
 
-<h3>UDiscover Scholar (Mentor: Dr. Catalin Georgescu)</h3>
-<h4>University of South Dakota, Vermillion, SD</h4>
-<h4>May 2018 – August 2018</h4>
-<ul>
-    <li>Awarded $3,000 through a competitive research fellowship.</li>
-    <li>Developed MAPLE code for numerical experiments.</li>
-    <li>Proved two significant theorems.</li>
-</ul>
+        <!-- Research Experience -->
+        <section>
+            <h2>Research Experience</h2>
 
-<h2>Teaching Experience</h2>
+            <div class="card">
+                <h3>Graduate Research Assistant</h3>
+                <h4>Mentors: Jeff Peterson, Jim Ferguson | LANL, Los Alamos, NM | Oct 2023 – Present</h4>
+                <ul>
+                    <li>Developed verification methods for simulations using arbitrary equations of state.</li>
+                    <li>Implemented a semi-analytic, EOS-agnostic Python solver integrated into <em>ExactPack</em>.</li>
+                    <li>Verified the LANL Singularity-EOS library.</li>
+                    <li>Results published in peer-reviewed journals and technical reports.</li>
+                </ul>
+            </div>
 
-<h3>Teaching Assistant (Aggregate Experience)</h3>
-<h4>Texas&nbsp;A&amp;M&nbsp;University</h4>
-<h4>August 2020 – May 2022</h4>
-<ul>
-    <li>Led recitations and labs for Calculus I and II.</li>
-    <li>Graded for Introduction to Proofs, Combinatorics, and Differential Equations.</li>
-</ul>
+            <div class="card">
+                <h3>Summer Fellow, XCP Computational Physics Workshop</h3>
+                <h4>LANL, Los Alamos, NM | June 2023 – Aug 2023</h4>
+                <ul>
+                    <li>Developed analytic solutions for special cases of Euler equations.</li>
+                    <li>Wrote Python code for analysis and visualization.</li>
+                    <li>Ran simulations using Eulerian code <em>xRAGE</em>.</li>
+                    <li>Compiled results in an internal LANL report.</li>
+                </ul>
+            </div>
 
-<h3>Math Circle Facilitator</h3>
-<h4>Texas&nbsp;A&amp;M&nbsp;University</h4>
-<h4>January 2021 – May 2021</h4>
-<ul>
-    <li>Facilitated problem-solving sessions for gifted K-12 students.</li>
-</ul>
+            <div class="card">
+                <h3>Student Intern (Mentor: Matthew Farthing)</h3>
+                <h4>U.S. Army Corps of Engineers, Vicksburg, MS | May 2022 – May 2023</h4>
+                <ul>
+                    <li>Developed IMEX finite element method for linear KdV equation in Python.</li>
+                    <li>Authored a technical report detailing analysis and numerical results.</li>
+                </ul>
+            </div>
 
-<h3>Undergraduate Tutor</h3>
-<h4>University of South Dakota</h4>
-<h4>January 2017 – May 2020</h4>
-<ul>
-    <li>Tutored courses ranging from algebra through differential equations and logic.</li>
-    <li>Assisted students with study strategies and time management.</li>
-</ul>
+            <!-- Additional research positions can continue in similar card format -->
+        </section>
 
-<h2>Service & Leadership</h2>
+        <!-- Teaching Experience -->
+        <section>
+            <h2>Teaching Experience</h2>
 
-<h3>Graduate Student Representative, Strategic Budgeting Council</h3>
-<h4>Texas&nbsp;A&amp;M&nbsp;University</h4>
-<h4>October 2025 – Present</h4>
-<ul>
-    <li>Advise on university-wide, multi-billion-dollar budgeting decisions.</li>
-</ul>
+            <div class="card">
+                <h3>Teaching Assistant (Aggregate)</h3>
+                <h4>Texas A&M University | Aug 2020 – May 2022</h4>
+                <ul>
+                    <li>Led recitations/labs for Calculus I and II.</li>
+                    <li>Graded courses in Proofs, Combinatorics, Differential Equations.</li>
+                </ul>
+            </div>
 
-<h3>Parliamentarian</h3>
-<h4>Graduate & Professional Student Government, Texas&nbsp;A&amp;M&nbsp;University</h4>
-<h4>October 2025 – Present</h4>
-<ul>
-    <li>Advise on parliamentary procedure and governing documents.</li>
-    <li>Serve as acting Speaker when required.</li>
-</ul>
+            <div class="card">
+                <h3>Math Circle Facilitator</h3>
+                <h4>Texas A&M University | Jan 2021 – May 2021</h4>
+                <ul>
+                    <li>Facilitated problem-solving sessions for gifted K–12 students.</li>
+                </ul>
+            </div>
+        </section>
 
-<h3>Speaker & Executive Vice President</h3>
-<h4>Graduate & Professional Student Government, Texas&nbsp;A&amp;M&nbsp;University</h4>
-<h4>April 2024 – April 2025</h4>
-<ul>
-    <li>Led the Graduate & Professional Student Senate representing 16,000+ students.</li>
-    <li>Oversaw constitutional and bylaw reforms.</li>
-    <li>Doubled senate membership through coordinated recruitment.</li>
-</ul>
+        <!-- Service & Leadership -->
+        <section>
+            <h2>Service & Leadership</h2>
 
-<h3>Officer, SIAM Student Chapter</h3>
-<h4>Texas&nbsp;A&amp;M&nbsp;University</h4>
-<h4>May 2021 – Present</h4>
-<ul>
-    <li>Roles: Liaison, President, Secretary.</li>
-    <li>Organized seminars and maintained chapter website.</li>
-</ul>
+            <div class="card">
+                <h3>Graduate Student Representative, Strategic Budgeting Council</h3>
+                <h4>Texas A&M University | Oct 2025 – Present</h4>
+                <ul>
+                    <li>Advise on university-wide budgeting decisions.</li>
+                </ul>
+            </div>
 
-<h2>Awards & Honors</h2>
-<ul>
-    <li><strong>Guseman Award</strong>, Texas A&amp;M University (2025)</li>
-    <li><strong>30 Under 30</strong>, University of South Dakota Alumni Association (2023)</li>
-    <li><strong>Thesis with High Distinction</strong>, University of South Dakota (2020)</li>
-    <li><strong>Eagle Scout</strong> (2015)</li>
-</ul>
+            <div class="card">
+                <h3>Speaker & Executive VP, Graduate & Professional Student Government</h3>
+                <h4>Texas A&M University | Apr 2024 – Apr 2025</h4>
+                <ul>
+                    <li>Led Senate representing 16,000+ students.</li>
+                    <li>Oversaw constitutional and bylaw reforms.</li>
+                    <li>Doubled Senate membership via recruitment.</li>
+                </ul>
+            </div>
+        </section>
 
-<h2>Publications</h2>
+        <!-- Awards & Honors -->
+        <section>
+            <h2>Awards & Honors</h2>
+            <ul>
+                <li><strong>Guseman Award</strong>, Texas A&M University (2025)</li>
+                <li><strong>30 Under 30</strong>, USD Alumni Association (2023)</li>
+                <li><strong>Thesis with High Distinction</strong>, USD (2020)</li>
+                <li><strong>Eagle Scout</strong> (2015)</li>
+            </ul>
+        </section>
 
-<h3>Peer-Reviewed Journal Articles</h3>
-<ul>
-    <li>
-        Gerberding, Seth, Jeff Peterson, Jim Ferguson, and Scott Ramsey.
-        <em>Semi-Analytic Solutions to the Noh Problem with a Black Box Equation of State.</em>
-        <em>Physics of Fluids</em>, accepted (2025).
-        (<a href="https://arxiv.org/abs/2509.16766" target="_blank" rel="noopener">arXiv preprint</a>)
-    </li>
+        <!-- Publications -->
+        <section>
+            <h2>Publications</h2>
 
-    <li>
-        Gerberding, Seth.
-        <a href="https://www.sciencedirect.com/science/article/pii/S0377042725005059" target="_blank" rel="noopener">
-            <em>A High-Order IMEX Method for Generalized Korteweg–De Vries Equations</em>
-        </a>.
-        <em>Journal of Computational and Applied Mathematics</em> 475 (2026).
-        doi:
-        <a href="https://doi.org/10.1016/j.cam.2025.116991" target="_blank" rel="noopener">
-            (reprint)
-        </a>
-    </li>
+            <div class="card">
+                <h3>Peer-Reviewed Journal Articles</h3>
+                <ul>
+                    <li>
+                        Gerberding, Seth, Jeff Peterson, Jim Ferguson, Scott Ramsey.
+                        <em>Semi-Analytic Solutions to the Noh Problem with a Black Box Equation of State.</em>
+                        <em>Physics of Fluids</em>, accepted (2025).
+                        (<a href="https://arxiv.org/abs/2509.16766" target="_blank" rel="noopener">arXiv preprint</a>)
+                    </li>
+                    <li>
+                        Gerberding, Seth.
+                        <a href="https://www.sciencedirect.com/science/article/pii/S0377042725005059" target="_blank"
+                            rel="noopener">
+                            <em>A High-Order IMEX Method for Generalized Korteweg–De Vries Equations</em>
+                        </a>.
+                        <em>Journal of Computational and Applied Mathematics</em> 475 (2026).
+                        doi: <a href="https://doi.org/10.1016/j.cam.2025.116991" target="_blank"
+                            rel="noopener">(reprint)</a>
+                    </li>
+                </ul>
+            </div>
 
-    <li>
-        Gerberding, Seth, Nida Obatake, and Anne Shiu.
-        <a href="https://www.tandfonline.com/doi/abs/10.1080/03081087.2020.1812497" target="_blank" rel="noopener">
-            <em>Identifiability of Linear Compartmental Models: The Effect of Moving Inputs, Outputs, and Leaks</em>
-        </a>.
-        <em>Linear and Multilinear Algebra</em> 70 (2022), no. 14, 2782–2803.
-        (<a href="https://arxiv.org/pdf/1910.13549v2.pdf" target="_blank" rel="noopener">arXiv</a>)
-    </li>
-</ul>
+            <div class="card">
+                <h3>Technical Reports</h3>
+                <ul>
+                    <li>
+                        Gerberding, Seth.
+                        <em>Black Box Equations of State: Creating Semi-Analytic Solutions to the Noh Problem...</em>
+                        Technical Report, LANL, 2024. LA-UR-24-29056.
+                        (<a href="resources/Gerberding_LA_UR_24_29056.pdf">pdf</a>)
+                    </li>
+                </ul>
+            </div>
 
-<h3>Technical Reports</h3>
-<ul>
-    <li>
-        Gerberding, Seth.
-        <em>Black Box Equations of State: Creating Semi-Analytic Solutions to the Noh Problem and Verifying Equation of
-            State Interfaces.</em>
-        Technical Report, Los Alamos National Laboratory, 2024.
-        LA-UR-24-29056.
-        (<a href="resources/Gerberding_LA_UR_24_29056.pdf">pdf</a>)
-    </li>
+        </section>
 
-    <li>
-        Gerberding, Seth, and Benjamin Musick.
-        <em>Verification & Validation of a New Equation of State Framework in xRAGE.</em>
-        Technical Report, Los Alamos National Laboratory, 2023.
-        LA-UR-23-29866.
-        (<a href="resources/LA-UR-23-29866.pdf">pdf</a>)
-    </li>
-</ul>
+    </div>
 
-<h3>Other Publications</h3>
-<ul>
-    <li>
-        Gerberding, Seth.
-        <em>Plato’s Ban: Why the Poets Are Exiled.</em>
-        Undergraduate Honors Thesis in Philosophy,
-        University of South Dakota, 2020.
-        (<a href="https://red.library.usd.edu/honors-thesis/84/" target="_blank" rel="noopener">reprint</a>)
-        <ul>
-            <li>
-                Awarded <em>High Distinction</em> by the USD Honors Committee.
-            </li>
-        </ul>
-    </li>
+</body>
 
-    <li>
-        Gerberding, Seth.
-        <em>Groups of Divisibility.</em>
-        Undergraduate Honors Thesis in Mathematics,
-        University of South Dakota, 2020.
-        (<a href="https://red.library.usd.edu/honors-thesis/76/" target="_blank" rel="noopener">reprint</a>)
-    </li>
-</ul>
+</html>
