--- a/selected_works.html
+++ b/selected_works.html
@@ -1,84 +1,103 @@
 <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Publications | Seth Gerberding</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="selected_works.html">Selected Works</a></li>
-            <li><a href="software.html">Software & Codes</a></li>
-            <li><a href="for_professionals.html">For Employers</a></li>
-            <li> <a href="writings.html">Wrtings, Language, and Literature</a></li>
-        </ul>
+
+    <nav class="navbar">
+        <div class="navbar-inner">
+            <a href="index.html">Home</a>
+            <a href="selected_works.html">Research</a>
+            <a href="software.html">Software & Codes</a>
+            <a href="writings.html">Writings, Language, and Literature</a>
+            <a href="for_professionals.html">For Employers</a>
+        </div>
     </nav>
 
-    <h1>Peer-Reviewed Papers</h1>
-    <ul>
-        <li>
-            Seth Gerberding, Jeff Peterson, Jim Ferguson, and Scott Ramsey.
-            <em>Semi-Analytic Solutions to the Noh Problem with a Black Box Equation of State.</em>
-            <em>Physics of Fluids</em>, accepted (2025).
-            (<a href="https://arxiv.org/abs/2509.16766" target="_blank" rel="noopener">arXiv preprint</a>)
-        </li>
+    <div class="container">
 
-        <li>
-            Seth Gerberding.
-            <a href="https://www.sciencedirect.com/science/article/pii/S0377042725005059" target="_blank"
-                rel="noopener">
-                A High-Order IMEX Method for Generalized Korteweg–De Vries Equations
-            </a>.
-            <em>Journal of Computational and Applied Mathematics</em>, 2026.
-            doi: <a href="https://doi.org/10.1016/j.cam.2025.116991" target="_blank" rel="noopener">
-                10.1016/j.cam.2025.116991
-            </a>
-        </li>
+        <h1>Publications</h1>
 
-        <li>
-            Seth Gerberding, Nida Obatake, and Anne Shiu.
-            <a href="https://www.tandfonline.com/doi/abs/10.1080/03081087.2020.1812497" target="_blank" rel="noopener">
-                Identifiability of Linear Compartmental Models: The Effect of Moving Inputs, Outputs, and Leaks
-            </a>.
-            <em>Linear and Multilinear Algebra</em> 70 (2022), no. 14, 2782–2803.
-            (<a href="https://arxiv.org/pdf/1910.13549v2.pdf" target="_blank" rel="noopener">arXiv</a>)
-        </li>
-    </ul>
-
-    <h1>Technical Reports</h1>
-    <ul>
-        <li>
-            Seth Gerberding.
-            <em>Black Box Equations of State: Creating Semi-Analytic Solutions to the Noh Problem and Verifying Equation
-                of State Interfaces.</em>
-            Los Alamos National Laboratory, 2024. LA-UR-24-29056. (<a
-                href="resources/Gerberding_LA_UR_24_29056.pdf">pdf</a>)
-        </li>
-
-        <li>
-            Seth Gerberding and Benjamin Musick.
-            <em>Verification & Validation of a New Equation of State Framework in xRAGE.</em>
-            Los Alamos National Laboratory, 2023. LA-UR-23-29866.
-            (<a href="resources/LA-UR-23-29866.pdf">pdf</a>)
-        </li>
-    </ul>
-
-    <h1>Other Publications</h1>
-    <ul>
-        <li>
-            Undergraduate thesis in philosophy:
-            <a href="https://red.library.usd.edu/honors-thesis/84/" target="_blank" rel="noopener">
-                Plato’s Ban: Why the Poets are Exiled
-            </a>
+        <section class="card">
+            <h2>Peer-Reviewed Papers</h2>
             <ul>
                 <li>
-                    Awarded <em>High Distinction</em> by the USD Honors Committee.
+                    Seth Gerberding, Jeff Peterson, Jim Ferguson, and Scott Ramsey.
+                    <em>Semi-Analytic Solutions to the Noh Problem with a Black Box Equation of State.</em>
+                    <em>Physics of Fluids</em>, accepted (2025).
+                    (<a href="https://arxiv.org/abs/2509.16766" target="_blank" rel="noopener">arXiv preprint</a>)
+                </li>
+                <li>
+                    Seth Gerberding.
+                    <a href="https://www.sciencedirect.com/science/article/pii/S0377042725005059" target="_blank"
+                        rel="noopener">
+                        A High-Order IMEX Method for Generalized Korteweg–De Vries Equations
+                    </a>.
+                    <em>Journal of Computational and Applied Mathematics</em>, 2026.
+                    doi: <a href="https://doi.org/10.1016/j.cam.2025.116991" target="_blank" rel="noopener">
+                        10.1016/j.cam.2025.116991
+                    </a>
+                </li>
+                <li>
+                    Seth Gerberding, Nida Obatake, and Anne Shiu.
+                    <a href="https://www.tandfonline.com/doi/abs/10.1080/03081087.2020.1812497" target="_blank"
+                        rel="noopener">
+                        Identifiability of Linear Compartmental Models: The Effect of Moving Inputs, Outputs, and Leaks
+                    </a>.
+                    <em>Linear and Multilinear Algebra</em> 70 (2022), no. 14, 2782–2803.
+                    (<a href="https://arxiv.org/pdf/1910.13549v2.pdf" target="_blank" rel="noopener">arXiv</a>)
                 </li>
             </ul>
-        </li>
+        </section>
 
-        <li>
-            Undergraduate thesis in mathematics:
-            <a href="https://red.library.usd.edu/honors-thesis/76/" target="_blank" rel="noopener">
-                Groups of Divisibility
-            </a>
-        </li>
-    </ul>
+        <section class="card">
+            <h2>Technical Reports</h2>
+            <ul>
+                <li>
+                    Seth Gerberding.
+                    <em>Black Box Equations of State: Creating Semi-Analytic Solutions to the Noh Problem and Verifying
+                        Equation
+                        of State Interfaces.</em>
+                    Los Alamos National Laboratory, 2024. LA-UR-24-29056.
+                    (<a href="resources/Gerberding_LA_UR_24_29056.pdf">pdf</a>)
+                </li>
+                <li>
+                    Seth Gerberding and Benjamin Musick.
+                    <em>Verification & Validation of a New Equation of State Framework in xRAGE.</em>
+                    Los Alamos National Laboratory, 2023. LA-UR-23-29866.
+                    (<a href="resources/LA-UR-23-29866.pdf">pdf</a>)
+                </li>
+            </ul>
+        </section>
+
+        <section class="card">
+            <h2>Other Publications</h2>
+            <ul>
+                <li>
+                    Undergraduate thesis in philosophy:
+                    <a href="https://red.library.usd.edu/honors-thesis/84/" target="_blank" rel="noopener">
+                        Plato’s Ban: Why the Poets are Exiled
+                    </a>
+                    <ul>
+                        <li>Awarded <em>High Distinction</em> by the USD Honors Committee.</li>
+                    </ul>
+                </li>
+                <li>
+                    Undergraduate thesis in mathematics:
+                    <a href="https://red.library.usd.edu/honors-thesis/76/" target="_blank" rel="noopener">
+                        Groups of Divisibility
+                    </a>
+                </li>
+            </ul>
+        </section>
+
+    </div>
+
 </body>
+
+</html>
